Make new grid resize to fixed width without column gaps.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ html{
 }
 
 .gridContainer{
-    display: grid;
 }
 .gridSquare{
     border-color: black;
